# winpilot

./: .gitignore  CMakeLists.txt
include/Pilot/: PilotAction.h  PilotActionListener.h  PilotActionStatus.h  PilotActionType.h  PilotAllocator.h  PilotButton.h  PilotConfig.h  PilotConnectResponse.h  PilotDefaultMetricCollector.h  PilotException.h  PilotHttpClient.h  PilotInput.h  PilotJson.h  PilotLabel.h  PilotLayout.h  PilotLayoutChild.h  PilotLiveManager.h  PilotLog.h  PilotLogAttributeBuilder.h  PilotLogConfigBuilder.h  PilotLogEntry.h  PilotLogLevel.h  PilotLoggerListener.h  PilotLogs.h  PilotMetricAggregation.h  PilotMetricCollector.h  PilotMetricConfigBuilder.h  PilotMetricEntry.h  PilotMetricType.h  PilotMetrics.h  PilotScreenCaptureProvider.h  PilotSdk.h  PilotSelect.h  PilotSessionAttributeBuilder.h  PilotSessionListener.h  PilotSessionStatus.h  PilotStat.h  PilotStlAllocator.h  PilotSwitch.h  PilotTab.h  (+8 more)
src/: PilotAction.cpp  PilotActionStatus.cpp  PilotActionType.cpp  PilotAllocator.cpp  PilotConfig.cpp  PilotConnectResponse.cpp  PilotDefaultMetricCollector.cpp  PilotException.cpp  PilotHttpClient.cpp  PilotJson.cpp  PilotLayout.cpp  PilotLiveKitPublisher.cpp  PilotLiveKitPublisher.h  PilotLiveManager.cpp  PilotLog.cpp  PilotLogAttributeBuilder.cpp  PilotLogConfigBuilder.cpp  PilotLogEntry.cpp  PilotLogLevel.cpp  PilotMetricAggregation.cpp  PilotMetricConfigBuilder.cpp  PilotMetricEntry.cpp  PilotMetricType.cpp  PilotMetrics.cpp  PilotSdk.cpp  PilotSessionAttributeBuilder.cpp  PilotTab.cpp  PilotUI.cpp  PilotWidget.cpp  PilotWidgetActions.cpp  PilotWidgets.cpp  PilotWin32.h
